[project]
name = "llmgate"
version = "0.1.0"
description = "Plug-and-play LLM connector via YAML config"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "pyyaml>=6.0"]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
gcp = ["google-auth>=2.0"]
dev = ["pytest", "pytest-mock", "python-dotenv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
